--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Šeit nekā nav!</title>
+    <title>Beauty of Corn</title>
+    <style>
+        body {
+            background-image: url('corn.jpg.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .page-content {
+            text-align: center;
+            padding: 100px;
+            background-color: rgba(255, 255, 255, 0.7);
+        }
+        h1 {
+            color: purple;
+            font-size: 36px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="page-content">
+        <h1>Beauty of Corn</h1>
+    </div>
 </body>
 </html>
